# surtr

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
iac/: full_vm_example.tf  qemu_instance.tf  qemu_vars.tf  test_qemu_vm.tf  test_realm.tf  test_version.tf  variables.tf  versions.tf
proto/: tfplugin6.9.proto
proxmox/: Cargo.toml
proxmox/examples/: create_realm.rs
proxmox/src/: lib.rs  main.rs  provider_data.rs
proxmox/src/api/: client.rs  common.rs  error.rs  mod.rs  pool.rs  response.rs  test_helpers.rs  version.rs
proxmox/src/api/access/: mod.rs  realms.rs
proxmox/src/api/nodes/: mod.rs  qemu.rs  qemu_test.rs
proxmox/src/api/qemu/: mod.rs
proxmox/src/data_sources/: data_source_version.rs  mod.rs  version.rs
proxmox/src/resources/: mod.rs  realm.rs
proxmox/src/resources/access/: mod.rs  resource_realm.rs
proxmox/src/resources/nodes/: mod.rs  resource_vm.rs  resource_vm_test.rs
proxmox/src/resources/qemu/: mod.rs  resource_vm.rs
proxmox/tests/: provider_integration.rs
proxmox/tests/integration/: access_realm_test.rs  mod.rs  nodes_qemu_test.rs
proxmox/tests/integration/qemu/: mod.rs  resource.rs
tfplug/: Cargo.toml  build.rs
tfplug/examples/: default_values.rs  plan_modifier_example.rs  plan_modifier_usage.rs  provider_advanced.rs  provider_example.rs  typed_builders.rs
tfplug/src/: attribute_type.rs  builders.rs  context.rs  data_source.rs  defaults.rs  ephemeral.rs  error.rs  function.rs  grpc.rs  import.rs  lib.rs  plan_modifier.rs  proto.rs  provider.rs  request.rs  resource.rs  schema.rs  server.rs  types.rs  validator.rs
tfplug/tests/: error_handling_test.rs  provider_async_simple.rs  provider_async_test.rs  provider_comprehensive.rs
