[workspace]
members = ["tfplug", "proxmox"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.13", features = ["transport", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = "0.23"
url = "2.5"

# Test dependencies
mockito = "1.2"
tokio-test = "0.4"