[package]
name = "proxmox"
version = "0.1.0"
edition = "2021"
description = "Terraform Provider for Proxmox VE"

[[bin]]
name = "terraform-provider-proxmox"
path = "src/main.rs"

[dependencies]
tfplug = { path = "../tfplug" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = "0.3"

[dev-dependencies]
mockito = { workspace = true }
tokio-test = { workspace = true }