[package]
name = "tfplug"
version = "0.1.0"
edition = "2021"
description = "Terraform Plugin Framework for Rust"

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio-test = { workspace = true }

