[package]
name = "tfplug"
version = "0.1.0"
edition = "2021"
description = "Terraform Plugin Framework for Rust"

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
regex = "1.11"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio-test = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
futures = "0.3"

